[package]
name = "botwork-session-broker"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_session_broker"
path = "src/lib.rs"

[[bin]]
name = "botwork-session-broker"
path = "src/main.rs"

[dependencies]
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
envoy-proto = { git = "https://github.com/phlax/envoy-proto-rs", tag = "v0.0.1" }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
prost = "0.13"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "net", "io-util", "time"] }
tokio-stream = "0.1"
tonic = "0.12"

[dev-dependencies]
axum = { version = "0.7", features = [] }
http = "1"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
