[package]
name = "botwork-tools"
version = "0.0.0"
edition = "2021"

[lib]
name = "botwork_tools"
path = "src/lib.rs"

[[bin]]
name = "botwork-tools"
path = "src/main.rs"

[dependencies]
# RFE #106 PR4: `botwork-tools bootstrap` parses the same yaml the old
# bootstrap binary parsed (via admin-core) and POSTs through admin-api.
# admin-core stays sea-orm-free so we don't drag the DB stack into the
# operator tool.
botwork-admin-core = { path = "../admin-core" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
# wiremock stubs admin-api so the bootstrap-subcommand tests don't
# need a real broker. Matches the pattern admin-api itself uses
# against control-plane (botworkz/botwork#112).
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
