[package]
name = "botwork-admin-ui-wasm"
version = "0.0.0"
edition = "2021"

# `cdylib` is required by wasm-bindgen's WASM glue; `rlib` lets the
# test harness import the crate as a library (currently unused; kept
# symmetric with the rest of the leptos-csr crates in the org).
[lib]
name = "botwork_admin_ui_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos 0.8 CSR — no server, no hydration. Same major as
# botworkz/gander's gander-chat, so we benefit from any
# cross-project upgrades happening in that repo.
leptos = { version = "0.8", features = ["csr"] }

# WASM / JS interop. `web-sys` features stay minimal in v0; we only
# need `Window` for the `fetch` call against the admin-api health
# endpoint and `console` for `console_error_panic_hook`. Add more
# as new components require them.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "console",
] }

# Route panics to the browser developer-tools console.
console_error_panic_hook = "0.1"

# JSON wire format for talking to admin-api.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
