[package]
name = "botwork-admin-ui-wasm"
version = "0.0.0"
edition = "2021"

# `cdylib` is required by wasm-bindgen's WASM glue; `rlib` lets the
# test harness import the crate as a library (currently unused; kept
# symmetric with the rest of the leptos-csr crates in the org).
[lib]
name = "botwork_admin_ui_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos 0.8 CSR — no server, no hydration. Same major as
# botworkz/gander's gander-chat, so we benefit from any
# cross-project upgrades happening in that repo.
leptos = { version = "0.8", features = ["csr"] }

# Client-side routing under /admin/. We use leptos_router rather than
# rolling our own URL→component map so deep links work (the server
# falls back any unknown /admin/* path to index.html, and the SPA
# router takes over from there).
leptos_router = "0.8"

# WASM / JS interop. `web-sys` features stay minimal in v0; we only
# need `Window` for the `fetch` calls against admin-api and `console`
# for `console_error_panic_hook`. Add more as new components require
# them.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "console",
] }

# Route panics to the browser developer-tools console.
console_error_panic_hook = "0.1"

# JSON wire format for talking to admin-api.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: this crate intentionally does NOT inherit the workspace
# `[lints]` block (which sets `unsafe_code = "forbid"` for the rest
# of the workspace). `#[wasm_bindgen(start)]` and the leptos view!
# macros expand into code that the `unsafe_code` lint flags from the
# call-site crate; `forbid` is unconditional and cannot be downgraded
# by a downstream `#[allow]`, so opting out at the manifest level is
# the only knob we have. Hand-written `unsafe { }` blocks here are
# still expected to be caught in review — `grep -n unsafe src/`
# returns nothing today.
